--- a/solid-arch.html
+++ b/solid-arch.html
@@ -141,10 +141,14 @@
     </div>
 
     <script>
-        // Add your images here - example:
         const items = [
-            // { type: 'image', src: 'images/category-name/image1.jpg' },
-            // { type: 'image', src: 'images/category-name/image2.jpg' },
+            { type: 'image', src: 'images/plain-arch/1.jpg' },
+            { type: 'image', src: 'images/plain-arch/2.jpg' },
+            { type: 'image', src: 'images/plain-arch/3.jpg' },
+            { type: 'image', src: 'images/plain-arch/4.jpg' },
+            { type: 'image', src: 'images/plain-arch/5.jpg' },
+            { type: 'image', src: 'images/plain-arch/6.jpg' },
+            { type: 'image', src: 'images/plain-arch/7.jpg' }
         ];
 
         window.onload = function() {
