--- a/hollow-metal.html
+++ b/hollow-metal.html
@@ -141,10 +141,25 @@
     </div>
 
     <script>
-        // Add your images here - example:
         const items = [
-            // { type: 'image', src: 'images/category-name/image1.jpg' },
-            // { type: 'image', src: 'images/category-name/image2.jpg' },
+            { type: 'image', src: 'images/metal-arch/1.jpg' },
+            { type: 'image', src: 'images/metal-arch/2.jpg' },
+            { type: 'image', src: 'images/metal-arch/3.jpg' },
+            { type: 'image', src: 'images/metal-arch/4.jpg' },
+            { type: 'image', src: 'images/metal-arch/5.jpg' },
+            { type: 'image', src: 'images/metal-arch/6.jpg' },
+            { type: 'image', src: 'images/metal-arch/7.jpg' },
+            { type: 'image', src: 'images/metal-arch/8.jpg' },
+            { type: 'image', src: 'images/metal-arch/9.jpg' },
+            { type: 'image', src: 'images/metal-arch/10.jpg' },
+            { type: 'image', src: 'images/metal-arch/11.jpg' },
+            { type: 'image', src: 'images/metal-arch/12.jpg' },
+            { type: 'image', src: 'images/metal-arch/13.jpg' },
+            { type: 'image', src: 'images/metal-arch/14.jpg' },
+            { type: 'image', src: 'images/metal-arch/15.jpg' },
+            { type: 'image', src: 'images/metal-arch/16.jpg' },
+            { type: 'image', src: 'images/metal-arch/17.jpg' },
+            { type: 'image', src: 'images/metal-arch/18.jpg' }
         ];
 
         window.onload = function() {
