--- a/admin/login.html
+++ b/admin/login.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #faf3e0;
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -23,12 +23,22 @@
         }
 
         .login-container {
-            background: white;
-            padding: 50px 40px;
+            background: transparent;
+            padding: 40px 40px 50px;
             border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            max-width: 400px;
+            box-shadow: none;
+            max-width: 450px;
             width: 100%;
+        }
+
+        .logo-img {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .logo-img img {
+            width: 200px;
+            height: auto;
         }
 
         .logo {
@@ -61,11 +71,12 @@
         .form-group input {
             width: 100%;
             padding: 12px 15px;
-            border: 2px solid #e0e0e0;
+            border: 2px solid #ddd;
             border-radius: 10px;
             font-size: 1em;
             font-family: 'Montserrat', sans-serif;
             transition: border 0.3s;
+            background: white;
         }
 
         .form-group input:focus {
@@ -137,6 +148,10 @@
 </head>
 <body>
     <div class="login-container">
+        <div class="logo-img">
+            <img src="../images/logo.png" alt="Myna Logo">
+        </div>
+        
         <div class="logo">
             <h1>🔐 Admin Portal</h1>
             <p>Myna Backdrops & Decor</p>
